--- a/service.html
+++ b/service.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 
-<body>
+<body style="font-family: Verdana, Geneva, Tahoma, sans-serif;">
     <div class="container">
         <div style="display: flex;justify-content: space-between; gap:0px; width: 50%; margin: 20px;">
             <img src="RAHUL.png" height="40px">
