--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
                 <h4>Gallery</h4>
             </a>
             <a href="service.html"><h4>Service</h4></a>
-            <a href="Contact.html"><h4>Contact</h4></a>
+            <a href="contact.html"><h4>Contact</h4></a>
         </div>
     </div>
     <div style="color: white; font-family:Verdana, Geneva, Tahoma, sans-serif; margin-top: 100px; padding-left: 50px;">
