--- a/service.html
+++ b/service.html
@@ -24,7 +24,7 @@
                 <h4>Gallery</h4>
             </a>
             <a href="service.html"><h4>Service</h4></a>
-            <a href="Contact.html"><h4>Contact</h4></a>
+            <a href="contact.html"><h4>Contact</h4></a>
         </div>
     </div>
     <div style="text-align: center;">
